# tree-sitter-gdl

./: .env.example  .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-gdl.h
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_gdl/: __init__.py  __init__.pyi  binding.c  py.typed
bindings/rust/: build.rs  lib.rs
plans/: TREE_SITTER_GDL.md
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: advanced.txt  arrays.txt  calls.txt  case_switch.txt  comments.txt  control_flow.txt  edge_cases.txt  functions.txt  identifiers.txt  line_continuation.txt  literals.txt  loops.txt  mdsplus.txt  oop.txt  operators.txt  pointers.txt  procedures.txt  statements.txt  strings.txt  structures.txt
tests/: test_python_bindings.py
